--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-news-page</title>
+    <title>Vue News Page</title>
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Sunflower:500" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
